# jimneyio

./: CMakeLists.txt  README.md  environment.cpp  environment.hpp  image_data.hpp  inclinometer.cpp  inclinometer.hpp  jimney.cpp  jimney.hpp  main.cpp  state.cpp  state.hpp  types.hpp
.github/workflows/: cmake.yml
